<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_activity02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caramelthunder.contacts.activity02">


    <TextView
        android:text="@string/Contact_Details02"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title02"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/name02"
        android:layout_alignParentStart="true"
        android:id="@+id/getname02"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Phone_Number"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number02"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/getname02"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Name"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name02"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/title02"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/number02"
        android:layout_alignParentStart="true"
        android:id="@+id/getnumber02"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Relationship"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relatioship02"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/getnumber02"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/Add_Person02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add02"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <include layout="@layout/list_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relatioship02"
        android:layout_centerHorizontal="true"
        android:id="@+id/list02"
        android:layout_above="@+id/add02" />


</RelativeLayout>
