<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_03"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caramelthunder.contacts.Activity03">

    <TextView
        android:text="@string/Contact_Profile03"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title03"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text=""
        android:textSize="25sp"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showname03"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/name03"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Phone_Number"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number03"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/showname03"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Name"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name03"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/title03"
        android:layout_alignParentStart="true" />

    <TextView
        android:text=""
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shownumber03"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/number03"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Relationship"
        android:textSize="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relatioship03"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/shownumber03"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list03"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/relatioship03" />


</RelativeLayout>
